--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,3 +11,6 @@
 
 // Components
 @import "components/navigation";
+@import "components/page-title";
+@import "components/container";
+@import "components/todo";
