--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,7 +10,9 @@
 @include foundation-everything;
 
 // Components
-@import "components/navigation";
-@import "components/page-title";
+@import "components/callout-auth";
 @import "components/container";
+@import "components/navigation";
+@import "components/page-actions";
+@import "components/page-title";
 @import "components/todo";
